✅ finish chapter 4